--- a/PROYECTO VERANO/PROYECTO VERANO.vcxproj.filters
+++ b/PROYECTO VERANO/PROYECTO VERANO.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="JugadorGenerico.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
+    <ClInclude Include="Carta.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
