clases carta y mazo hechas
se hicieron los metodos inicializar mazo (con 52 cartas unicas) y barajar (desordenar el mazo), al igual que arreglos en la herencia y clases abstracta

--- a/PROYECTO VERANO/PROYECTO VERANO.vcxproj
+++ b/PROYECTO VERANO/PROYECTO VERANO.vcxproj
@@ -139,6 +139,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Carta.h" />
+    <ClInclude Include="color.h" />
     <ClInclude Include="Dealer.h" />
     <ClInclude Include="Juego.h" />
     <ClInclude Include="Jugador.h" />
