--- a/PROYECTO VERANO/PROYECTO VERANO.vcxproj.filters
+++ b/PROYECTO VERANO/PROYECTO VERANO.vcxproj.filters
@@ -71,5 +71,8 @@
     <ClInclude Include="Jugador.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
+    <ClInclude Include="color.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
