Definicion de NodoMano.h y Mano.cpp
Se hizo una lista enlazada para manejar la Mano de cada jugador

--- a/PROYECTO VERANO/PROYECTO VERANO.vcxproj.filters
+++ b/PROYECTO VERANO/PROYECTO VERANO.vcxproj.filters
@@ -71,7 +71,7 @@
     <ClInclude Include="Jugador.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
-    <ClInclude Include="color.h">
+    <ClInclude Include="NodoMano.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
   </ItemGroup>
