--- a/PROYECTO VERANO/PROYECTO VERANO.vcxproj
+++ b/PROYECTO VERANO/PROYECTO VERANO.vcxproj
@@ -139,7 +139,6 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Carta.h" />
-    <ClInclude Include="color.h" />
     <ClInclude Include="Dealer.h" />
     <ClInclude Include="Juego.h" />
     <ClInclude Include="Jugador.h" />
@@ -148,6 +147,7 @@
     <ClInclude Include="Mano.h" />
     <ClInclude Include="Mazo.h" />
     <ClInclude Include="Nodo.h" />
+    <ClInclude Include="NodoMano.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
